# green-light-engine

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  nyt_weekly.yml
data/: green_light.duckdb
data/interim/: README.md
data/processed/: README.md
data/raw/hardcover/: README.md
data/raw/nyt/: README.md
docs/: gate0_report.md
flows/: README.md  fuzzy_nyt_gr.py  goodreads_ingest.py  hardcover_client.py  hardcover_probe.py  models.py  nyt_ingest.py  nytimes_flow.py
notebooks/: 01_explore.ipynb  README.md
src/: README.md
src/gle/: __init__.py  gate0_check.py  ingest_nyt.py
tests/: test_gate0_check.py  test_ingest_nyt.py  test_smoke.py
