[tool.poetry]
name = "green-light-engine"
version = "0.1.0"
description = "Niche Prediction Model Project"
authors = ["rkendev <aspjscript@hotmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = true
packages = [
  { include = "flows" },
  { include = "gle", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
prefect = "^2.19.7"
duckdb = "^1.1.2"           # safe to keep; used later

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 88
